# filmer

./: .cursorrules  .dockerignore  .generalrules  .gitignore  .projectrules  DOCKER_README.md  Dockerfile  GUIDE_COMPLETE_PIPELINE.md  QUICK_START_EXAMPLE.md  QUICK_START_MVP.md  README.md  cut_video.py  docker-compose.yml  pyproject.toml  requirements.txt  run_full_pipeline.bat  run_full_pipeline.sh  test_chromadb.py  test_embedding.py  timeline.json
.cursor/plans/: docker_setup_with_persistent_volumes_f06a5526.plan.md  phase_1_implementation_-_3-sentence_chunking_and_multi-narration_9e5aca33.plan.md  production_architecture_design_28ce2753.plan.md  testing_plan_-_timelinestage_mvp_and_integration_e113f46b.plan.md
api/: __init__.py
api/models/: __init__.py
films/input/: 3034981-0-FoxandHareSavetheForest-1080.srt
legacy/: README.md  cut_video.py
mix/: imdb123123.json
projects/test_project/outputs/: ingest_output.json  (+2 more)
scripts/: convert_timeline_to_legacy.py  create_project.py  migrate_legacy.py  quick_start_example.bat  quick_start_example.sh  run_pipeline.py  run_stage.py  run_timeline_mvp.py  test_timeline_integration.py  test_timeline_mvp.py
src/: __init__.py
src/adapters/: __init__.py  chromadb_adapter.py  embedding_adapter.py  ffmpeg_adapter.py
src/contracts/: __init__.py
src/core/: __init__.py  chunking.py  filtering.py  matching.py  timeline_builder.py
src/stages/: __init__.py  base.py  index.py  ingest.py  render.py  search.py  timeline.py  timeline_mvp.py
src/utils/: __init__.py  file_utils.py  logging_config.py  srt_parser.py
(+8 files in other folders)
